--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -6,6 +6,8 @@
     <title>AngularJS Test</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.0-beta.3/angular-ui-router.min.js"></script>
+    <%=htmlWebpackPlugin.files.webpackManifest%>
 </head>
 
 <body class="container">
