--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html ng-app="app" ng-strict-di>
+<html>
 
 <head>
     <meta charset="utf-8" />
     <title>AngularJS Test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.0-beta.3/angular-ui-router.min.js"></script>
