--- a/src/app/components/main/main.css
+++ b/src/app/components/main/main.css
@@ -1,6 +1,6 @@
 
 .root {
-  composes: borderColorAnim comp from '../../commons.css';
+  composes: borderColorAnim comp from '../../css/commons.css';
   display: block;
   margin-bottom: 10px;
 }
