--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -12,9 +12,9 @@
 </head>
 
 <body class="container">
-    <app>
+    <root>
         <span class="loader">Loading...</span>
-    </app>
+    </root>
 </body>
 
 </html>
