Section one added

--- a/src/app/components/commons/header/header.css
+++ b/src/app/components/commons/header/header.css
@@ -1,4 +1,4 @@
-.root {
+.header {
   background: url('img/angular.svg') no-repeat 100% 0;
   composes: borderColorAnim comp from '../../../css/commons.css';
   margin-bottom: 10px;
