--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>AngularJS Test</title>
+    <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
