--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -16,7 +16,7 @@
 
 <body class="container">
     <root>
-        <span class="loader">Loading...</span>
+        <p style="margin-top:40px;text-align:center">Downloading...</p>
     </root>
 </body>
 
